k8s/namespace.yaml

apiVersion: v1
kind: Namespace
metadata:
  name: mindsdb-crypto
  labels:
    name: mindsdb-crypto
    app: xplaincrypto
